--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     font-size: 62.5%;
     --color-primary: #ff91cf; 
-    --color-secondary: #9a458386;
+    --color-secondary: #9a4583b7;
     --color-font: #2c1b2c;
     --color-shadow: rgba(0, 0, 0, 0.1);
 }
@@ -13,11 +13,18 @@
 }
 
 html, body {
-    height: 100%;
+    height: 100vp;
     background-color: var(--color-primary);
     font-size: 2.5rem;
     font-family: 'Shadows Into Light', cursive;
+    background-image: url("https://imgpx.com/5n79S0s5SZzW.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
 }
+
+
 
 p,
 i,
@@ -146,5 +153,6 @@ circle::before {
 }
 
 
-
-
+#backgroundMusic {
+    display: none; 
+}
