--- a/style.css
+++ b/style.css
@@ -25,8 +25,14 @@ html, body {
 }
 
 
-
-p,
+h2,
+p
+{
+    color: rgba(38, 34, 34, 0.771);
+    font-size: 2rem;
+    text-align: center;
+    margin-block: 1rem;
+}
 i,
 h1 {
     color: var(--color-font);
